@@ -1,7 +1,7 @@
 #include <string.h>
 
-extern int udhcpd(int argc, char *argv[]);
-extern int udhcpc(int argc, char *argv[]);
+extern int udhcpd_main(int argc, char *argv[]);
+extern int udhcpc_main(int argc, char *argv[]);
 
 int main(int argc, char *argv[])
 {
@@ -9,8 +9,8 @@ int main(int argc, char *argv[])
 	char *base = strrchr(argv[0], '/');
 	
 	if (strstr(base ? (base + 1) : argv[0], "dhcpd"))
-		ret = udhcpd(argc, argv);
-	else ret = udhcpc(argc, argv);
+		ret = udhcpd_main(argc, argv);
+	else ret = udhcpc_main(argc, argv);
 	
 	return ret;
 }
